<resources>

    <string name="app_name">Notice Board</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">New Events</string>
    <string name="none">None</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="Login">Login</string>
	<string name="newuser">New User</string>
	<string name="email_hint">yourname@example.com</string>
	<string name="password_hint">password</string>
	<string name="time_hint">Time</string>
	<string name="browse">Browse Image</string>
	<string name="no_image">No Image selected</string>
	<string name="date_hint">Date</string>
	<string name="start_upload">Upload</string>
	<string name="venue">Venue</string>
	<string name="root_url">http://192.168.1.199/sdpd/</string>
	<string-array name="tags_arrays">
        <item>EEE</item>
        <item>CS/IS</item>
        <item>ENI</item>
        <item>MECH</item>
        <item>CHEM</item>
        <item>DUAL DEGREE</item>
    </string-array>
</resources>