<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
	 >

    <EditText
        android:id="@+id/up_title"
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
	    android:background="#88000000"
	    android:ems="10"
	    android:padding="10dp"
	    android:shadowColor="@android:color/darker_gray"
	    android:textColor="#cccccc"
	    android:textCursorDrawable="@null" 
        android:hint="@string/title">
		<requestFocus android:layout_width="match_parent" />

	</EditText>

	<EditText
        android:id="@+id/up_venue"
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
	    android:background="#88000000"
	    android:ems="10"
	    android:padding="10dp"
	    android:shadowColor="@android:color/darker_gray"
	    android:textColor="#cccccc"
	    android:textCursorDrawable="@null" 
        android:hint="@string/venue"
        />



	<TimePicker
	    android:id="@+id/up_time"
	    android:layout_gravity="center_horizontal"
	    android:padding="5dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	

	<EditText
	    android:id="@+id/up_date"
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
	    android:background="#88000000"
	    android:ems="10"
	    android:padding="10dp"
	    android:shadowColor="@android:color/darker_gray"
	    android:textColor="#cccccc"
	    android:textCursorDrawable="@null"
	    android:hint="@string/date_hint"/>
	
	<EditText
	    android:id="@+id/up_desc"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="10dp"
	    android:background="#88000000"
	    android:ems="10"
	    android:lines="4"
	    android:padding="10dp"
	    android:shadowColor="@android:color/darker_gray"
	    android:textColor="#cccccc"
	    android:textCursorDrawable="@null" 
	    android:hint="@string/description" >
    </EditText>
    
	<Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:layout_marginRight="20dp"
        android:layout_height="45dp"
        android:background="#88888888"
        android:entries="@array/tags_arrays"
         />
	
	<Button
	    android:id="@+id/up_image"
		android:textColor="#cccccc"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
		android:background="#88000000"        
        android:padding="3dp"
	    android:text="@string/browse">
	</Button>

	<TextView
	    android:id="@+id/up_tv"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#88000000"
	    android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
	    android:padding="5dp"
	    android:layout_marginTop="5dp"
	    android:text="@string/no_image"
	    android:textColor="#cccccc"
	    android:textStyle="bold" />
	
	<Button
	    android:id="@+id/upload"
		android:textColor="#cccccc"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
		android:background="#88000000"        
        android:padding="3dp"
	    android:text="@string/start_upload" />
</LinearLayout>
</ScrollView>